# machine-learning

./: Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  resources.md
docs/projects/: resources.md
docs/stylesheets/: extra.css
