[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = "Machine Learning"
authors = ["Luke Miloszewski <lukemiloszewski@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lukemiloszewski/machine-learning"
repository = "https://github.com/lukemiloszewski/machine-learning"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "ml", from = "src" },
]

[tool.poetry.urls]
Changelog = "https://github.com/lukemiloszewski/machine-learning/releases"

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11.0"

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = "^1.7.4"}
black = {extras = ["jupyter"], version = "^22.6.0"}
flake8 = "^5.0.4"
isort = "^5.10.0"
ipykernel = "^6.15.1"
ipython = "^8.4.0"
mkdocs-material = "^8.5.8"
mypy = "^0.971"
pre-commit = "^2.17.0"
pydocstyle = "^6.1.1"
pytest = "^7.0.0"
pytest-asyncio = "^0.19.0"
pytest-cov = "^3.0.0"
rich = "^12.5.1"
safety = "^2.3.1"
typeguard = "^2.13.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
warn_return_any = false
show_column_numbers = true
show_error_codes = true

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100","D104", "D105", "D106", "D107"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
lines_after_imports = 2

[tool.black]
line-length = 100

[tool.coverage.paths]
source = ["src"]
tests = ["tests"]

[tool.coverage.run]
branch = true
source = ["quant_research"]

[tool.coverage.report]
show_missing = true
fail_under = 100
omit = [
  "*/*init*",
]

[tool.bandit]
exclude_dirs = ["tests"]
